--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-google-maps/api": "^2.20.6",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
