--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,8 @@
     "react-time-picker": "^7.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
