--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,10 +15,6 @@ isoduration==20.11.0
 itables==2.3.0
 Jinja2==3.1.5
 joblib==1.5.0
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
 jwt==1.3.1
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
@@ -40,7 +36,7 @@ python-json-logger==3.3.0
 python-multipart==0.0.20
 pyzmq==26.4.0
 referencing==0.36.2
-requests==2.25.1
+requests
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.24.0
