--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,12 @@ ace_tools_open==0.1.0
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
+bcrypt==3.2.0
 email_validator==2.2.0
 emails==0.6
 fastapi==0.115.11
 fastjsonschema==2.21.1
+h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 importlib-metadata==4.6.4
@@ -29,6 +31,7 @@ pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
+PyJWT==2.3.0
 Pygments==2.19.1
 python-dateutil==2.9.0
 python-dotenv==1.0.1
@@ -50,4 +53,3 @@ starlette==0.46.0
 stripe==12.1.0
 uri-template==1.3.0
 uvicorn==0.34.0
-
