--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ email_validator==2.2.0
 emails==0.6
 fastapi==0.115.11
 fastjsonschema==2.21.1
+gdown==5.2.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -50,5 +51,6 @@ SQLAlchemy==2.0.38
 sqlmodel==0.0.23
 starlette==0.46.0
 stripe==12.1.0
+tenacity==9.1.2
 uri-template==1.3.0
 uvicorn==0.34.0
